[gd_scene load_steps=3 format=3 uid="uid://d1fjhxjw7bthm"]

[ext_resource type="Script" uid="uid://hx3gk4uhfasg" path="res://row.gd" id="1_go4wn"]
[ext_resource type="Texture2D" uid="uid://bdu78ubof30w4" path="res://assets/icons/edit.svg" id="2_rk5gk"]

[node name="Row" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -391.0
offset_bottom = -801.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_go4wn")

[node name="TimeLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Time"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 8.0

[node name="TextLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Text"
vertical_alignment = 1
autowrap_mode = 2

[node name="TextEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="BtnEdit" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_vertical = 4
toggle_mode = true
icon = ExtResource("2_rk5gk")
icon_alignment = 1
expand_icon = true

[node name="BtnDel" type="Button" parent="."]
visible = false
layout_mode = 2
text = "del"

[connection signal="text_submitted" from="VBoxContainer/TextEdit" to="." method="_on_text_edit_text_submitted"]
[connection signal="toggled" from="BtnEdit" to="." method="_on_btn_edit_toggled"]
